--- a/defaults/alacritty.toml
+++ b/defaults/alacritty.toml
@@ -1,6 +1,5 @@
 [env]
 TERM = "xterm-256color"
-EDITOR = "nvim"
 
 [shell]
 program = "zellij"
@@ -15,3 +14,6 @@ opacity = 0.98
 bindings = [
 { key = "F11", action = "ToggleFullscreen" }
 ]
+
+[selection]
+save_to_clipboard = true
